# segmentation_tools

./: .gitignore  CellSegmentation.ipynb  Dockerfile  FUCCI_classifier.ipynb  FUCCI_mlp.ipynb  QPM.ipynb  README.md  batch_rename.ipynb  celltool.ipynb  cupy_test.ipynb  docker-compose.debug.yml  docker-compose.yml  environment.yml  environment_backup.yaml  gastruloid_analysis.ipynb  hsv.ipynb  mosaic_stages.ipynb  mosaic_suspension.ipynb  nuclear_FUCCI_MLP.ipynb  pip_req.txt  pyqtgraph_main.py  req.txt  requirements.txt  segmentation.ipynb  shape autoencoder.ipynb  shape_vs_velocity.ipynb  solve_tiling.ipynb  suspended_volumes.ipynb  vispy_main.py  volume_plots.ipynb  volume_reduction.ipynb
monolayer_tracking/: .npy  pyproject.toml  requirements.txt
monolayer_tracking/monolayer_tracking/: denoise_autoencoder.py  image_segmentation.py  networks.py  preprocessing.py  segmented_comprehension.py  utils.py
monolayer_tracking/src/monolayer_tracking/: FUCCI_linking.py  plot_tools.py  preprocessing.py  segmented_comprehension.py
monolayer_tracking/src/monolayer_tracking.egg-info/: SOURCES.txt  top_level.txt
python_onboarding/: 1-anaconda.md  2-vscode.md  3-GPU.md  4-cellpose.md
segmentation_tools/: pyproject.toml
segmentation_tools/src/monolayer_tracking.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
segmentation_tools/src/segmentation_tools/: fucci.py  heightmap.py  image_segmentation.py  io.py  mitosis_detection.py  networks.py  plot_tools.py  preprocessing.py  segmented_comprehension.py  shape_operations.py  spatial.py  utils.py
segmentation_tools/src/segmentation_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
segmentation_viewer/: pyproject.toml  setup.py  token.txt
segmentation_viewer/segmentation_viewer/: canvas.py  command_line.py  main.py
segmentation_viewer/segmentation_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
segmentation_viewer/src/segmentation_viewer/: canvas.py  command_line.py  io.py  main-ANDY-DESKTOP.py  main.py  qt.py  scripting.py  ui.py  update.py  utils.py  workers.py
segmentation_viewer/src/segmentation_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
segmentation_viewer/src/segmentation_viewer/assets/: darktheme.qss
segmentation_viewer/src/segmentation_viewer/segmentation_viewer.egg-info/: PKG-INFO  SOURCES.txt
