[project]
name = "segmentation_tools"

version = "0.0.1"

authors = [
  { name="Andy Zhang", email="andyletzhang@uchicago.edu" },
]

description = "Scripts for segmentation, tracking, and image processing. Description edited 20240304."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "cellpose",
    "pandas",
    "trackpy",
    "matplotlib",
    "scipy",
    "scikit-image",
    "networkx",
    "natsort",
    "nd2",
    "numba",
    "dask",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]